Fix some grid spacing on mobile

--- a/src/web/views/EmployerList/EmployerList.scss
+++ b/src/web/views/EmployerList/EmployerList.scss
@@ -48,7 +48,7 @@ button.EmployerList__CloseModal {
 
 @media (max-width: $body-2column-width) {
 	div.EmployerList__Container {
-		grid-template-columns: repeat(1, 1fr);
+		grid-template-columns: repeat(1, minmax(0, 1fr));
 	}
 
 	button.EmployerList__CloseModal {
@@ -66,6 +66,6 @@ button.EmployerList__CloseModal {
 
 @media (max-width: $body-3column-width) and (min-width: $body-2column-width) {
 	div.EmployerList__Container {
-		grid-template-columns: repeat(2, 1fr);
+		grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
 }
